--- a/index.html
+++ b/index.html
@@ -152,17 +152,17 @@
     <div class="grid" id="grid">
       <!-- Bytt filnavnene under til dine egne bilder -->
       <figure class="tile lg">
-        <img src="superhero_haakon.jpg" alt="Photoshop: deg som superhelt" loading="lazy">
+        <img src="superhero_haakon.png" alt="Photoshop: deg som superhelt" loading="lazy">
         <figcaption class="cap">Superhelt, men HR har sagt nei til kappe på jobb.</figcaption>
       </figure>
 
       <figure class="tile sm">
-        <img src="mermaid_haakon.jpg" alt="Photoshop: deg som havfrue" loading="lazy">
+        <img src="mermaid_haakon.png" alt="Photoshop: deg som havfrue" loading="lazy">
         <figcaption class="cap">Havfrue, men fortsatt landkrabbe i Excel.</figcaption>
       </figure>
 
       <figure class="tile sm">
-        <img src="shrek_haakon.jpg" alt="Photoshop: deg som Shrek" loading="lazy">
+        <img src="shrek_haakon.png" alt="Photoshop: deg som Shrek" loading="lazy">
         <figcaption class="cap">Laget i myr-lys og dårlig smak.</figcaption>
       </figure>
 
