--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     padding: 15px;
     text-align: center;
   ">
-    <img src="img/Mario_Ferie.png" alt="Photoshop: Meg som Mario på ferie"
+    <img src="Mario_Ferie.png" alt="Photoshop: Meg som Mario på ferie"
       loading="lazy" style="
       width: auto;
       height: 100%;
@@ -206,7 +206,7 @@
   </figure>
 
   <figure class="tile" style="border: 1px solid rgba(255,255,255,.25); border-radius: 12px; overflow: hidden; background: rgba(255,255,255,.05); position: relative; padding: 8px; text-align:center;">
-    <img src="img/mermaid_haakon.jpg" alt="Photoshop: deg som havfrue" loading="lazy"
+    <img src="mermaid_haakon.jpg" alt="Photoshop: deg som havfrue" loading="lazy"
       style="width: 100%; height: auto; display: block; margin: 0 auto;">
     <figcaption class="cap" style="margin-top: 6px; font-size: .9rem; background: rgba(0,0,0,.55); display: inline-block; padding: 6px 10px; border-radius: 10px; border: 1px solid rgba(255,255,255,.2);">
       For feit til å være en havfrue i vann.
@@ -214,7 +214,7 @@
   </figure>
 
   <figure class="tile" style="border: 1px solid rgba(255,255,255,.25); border-radius: 12px; overflow: hidden; background: rgba(255,255,255,.05); position: relative; padding: 8px; text-align:center;">
-    <img src="img/shrek_haakon.jpg" alt="Photoshop: deg som Shrek" loading="lazy"
+    <img src="shrek_haakon.jpg" alt="Photoshop: deg som Shrek" loading="lazy"
       style="width: 100%; height: auto; display: block; margin: 0 auto;">
     <figcaption class="cap" style="margin-top: 6px; font-size: .9rem; background: rgba(0,0,0,.55); display: inline-block; padding: 6px 10px; border-radius: 10px; border: 1px solid rgba(255,255,255,.2);">
       Vi er vel alle lei av shrek-meme-kulturen nå, eller?
@@ -222,7 +222,7 @@
   </figure>
 
   <figure class="tile" style="border: 1px solid rgba(255,255,255,.25); border-radius: 12px; overflow: hidden; background: rgba(255,255,255,.05); position: relative; padding: 8px; text-align:center;">
-    <img src="img/beyonce_stage_haakon.jpg" alt="Photoshop: deg på scenen som popikon" loading="lazy"
+    <img src="beyonce_stage_haakon.jpg" alt="Photoshop: deg på scenen som popikon" loading="lazy"
       style="width: 100%; height: auto; display: block; margin: 0 auto;">
     <figcaption class="cap" style="margin-top: 6px; font-size: .9rem; background: rgba(0,0,0,.55); display: inline-block; padding: 6px 10px; border-radius: 10px; border: 1px solid rgba(255,255,255,.2);">
       Verken singel eller klar for scenen, but i DO run the world.
@@ -230,7 +230,7 @@
   </figure>
 
   <figure class="tile" style="border: 1px solid rgba(255,255,255,.25); border-radius: 12px; overflow: hidden; background: rgba(255,255,255,.05); position: relative; padding: 8px; text-align:center;">
-    <img src="img/wizard_haakon.jpg" alt="Photoshop: deg som trollmann" loading="lazy"
+    <img src="wizard_haakon.jpg" alt="Photoshop: deg som trollmann" loading="lazy"
       style="width: 100%; height: auto; display: block; margin: 0 auto;">
     <figcaption class="cap" style="margin-top: 6px; font-size: .9rem; background: rgba(0,0,0,.55); display: inline-block; padding: 6px 10px; border-radius: 10px; border: 1px solid rgba(255,255,255,.2);">
       CTRL+C, CTRL+V, CTRL+Abracadabra.
@@ -238,7 +238,7 @@
   </figure>
 
   <figure class="tile" style="border: 1px solid rgba(255,255,255,.25); border-radius: 12px; overflow: hidden; background: rgba(255,255,255,.05); position: relative; padding: 8px; text-align:center;">
-    <img src="img/astronaut_haakon.jpg" alt="Photoshop: deg som romturist" loading="lazy"
+    <img src="astronaut_haakon.jpg" alt="Photoshop: deg som romturist" loading="lazy"
       style="width: 100%; height: auto; display: block; margin: 0 auto;">
     <figcaption class="cap" style="margin-top: 6px; font-size: .9rem; background: rgba(0,0,0,.55); display: inline-block; padding: 6px 10px; border-radius: 10px; border: 1px solid rgba(255,255,255,.2);">
       Fordi jeg spacer ut hele tiden
@@ -469,4 +469,5 @@
   .acid-overlay.clickable{ cursor: zoom-out; }
   .acid-modal{ cursor:auto; }
 </style>
+
 
