--- a/index.html
+++ b/index.html
@@ -153,12 +153,15 @@
     <div class="ticker" aria-hidden="true">
       <div class="ticker__track">
         <span class="badge">Kostyme?</span><span>Jeg har flere enn deg</span><span class="badge">Comic Sans?</span><span>Jeg prøvde, men fikk ikke til</span>
-        <span class="badge">Jonathan?</span><span>Jeg prøvde å snakke han vekk fra strap-on</span><span class="badge">Jeg?</span><span>La meg være i fred.</span>
+        <span class="badge">Jonathan?</span><span>Han fant faktisk et kostyme uten pikk</span><span class="badge">Jeg?</span><span>La meg være i fred.</span>
       </div>
     </div>
 
     <div class="card" role="region" aria-label="Intro">
-      <p>Ikke fant vi kostymet, men vi fant en idé: dårlige montasjer, høy selvironi. Skann QR-koden på t-skjorta, land her, og bla i galleriet av “kunstig” deg.</p>
+      <p>På reisen for å finne kostyme, kom jeg med så sinnsykt mange gode ideer. Innen jeg hadde bestemt meg for kostyme, var det dessverre for sent. Ingen kostymebutikker som hadde det, jeg er for lat til å lage kostyme selv, og heller ikke tid til å bestille fra nett.</p>
+      <p></p>
+      <p>I full panikk kjøpte jeg trykkpapir på biltema, og skrev ut en QR-kode (altså, du er her nå, så dette vet du jo).</p>
+      <p>Det fine med det, er at nå kan jeg showcase favorittene mine. Du kan enten scrolle nedover, eller trykk på knappen rett under for å se en tilfeldig rekke av bilder (er du lat og ser tilfeldig, kan det være det ser litt syre ut).</p>
       <div class="row">
         <a class="btn" id="randomBtn" href="#gallery">Vis meg et tilfeldig bilde</a>
       </div>
@@ -167,7 +170,7 @@
 
 </p>
 
-<h2 id="gallery" style="margin:0px 0 0px;">SE PÅ KOSTYMENE MINE</h2>
+<h2 id="gallery" style="margin:0px 0 0px;">Dette er kostymene:</h2>
 
 <div class="grid" id="grid" style="
   display: grid;
@@ -209,7 +212,7 @@
     <img src="mermaid_haakon.jpg" alt="Photoshop: deg som havfrue" loading="lazy"
       style="width: 100%; height: auto; display: block; margin: 0 auto;">
     <figcaption class="cap" style="margin-top: 6px; font-size: .9rem; background: rgba(0,0,0,.55); display: inline-block; padding: 6px 10px; border-radius: 10px; border: 1px solid rgba(255,255,255,.2);">
-      For feit til å være en havfrue i vann.
+      Big, blonde and beautifish.
     </figcaption>
   </figure>
 
@@ -225,7 +228,7 @@
     <img src="beyonce_stage_haakon.jpg" alt="Photoshop: deg på scenen som popikon" loading="lazy"
       style="width: 100%; height: auto; display: block; margin: 0 auto;">
     <figcaption class="cap" style="margin-top: 6px; font-size: .9rem; background: rgba(0,0,0,.55); display: inline-block; padding: 6px 10px; border-radius: 10px; border: 1px solid rgba(255,255,255,.2);">
-      Verken singel eller klar for scenen, but i DO run the world.
+      Verken singel eller klar for scenen, but I DO run the world. (For de ukulturelle er dette meg som Beyonce)
     </figcaption>
   </figure>
 
@@ -241,7 +244,7 @@
     <img src="astronaut_haakon.jpg" alt="Photoshop: deg som romturist" loading="lazy"
       style="width: 100%; height: auto; display: block; margin: 0 auto;">
     <figcaption class="cap" style="margin-top: 6px; font-size: .9rem; background: rgba(0,0,0,.55); display: inline-block; padding: 6px 10px; border-radius: 10px; border: 1px solid rgba(255,255,255,.2);">
-      Fordi jeg spacer ut hele tiden
+      Så mye som jeg spacer ut, er det naturlig å ha Lance/Louis/Neil Armstrong som kostyme.
     </figcaption>
   </figure>
 </div>
@@ -469,5 +472,6 @@
   .acid-overlay.clickable{ cursor: zoom-out; }
   .acid-modal{ cursor:auto; }
 </style>
+
 
 
