--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
     <div class="ticker" aria-hidden="true">
       <div class="ticker__track">
         <span class="badge">Kostyme?</span><span>Jeg har flere enn deg</span>
-        <span class="badge">Hvor er kostymet mitt?</span><span>På denne siden, din doofus</span>
-        <span class="badge">Jonathan?</span><span>Han fant faktisk et kostyme uten pikk</span>
+        <span class="badge">Verisure</span><span>Stolt leverandør av røykvarslere som snakker og piper midt på natta!</span>
+        <span class="badge">Månedens kundetilbud:</span><span>1 for 2 på alle magnetkontakter!</span>
         <span class="badge">OBS:</span><span>Please mind the gap</span>
       </div>
     </div>
@@ -502,6 +502,7 @@
   .acid-overlay.clickable{ cursor: zoom-out; }
   .acid-modal{ cursor:auto; }
 </style>
+
 
 
 
